# llm-abm-energymarkets

./: .gitignore  LICENSE  README.md  energy_market_temp.py  pyproject.toml  test_energy_market.py
notebooks/: abm_sandbox.ipynb
results/results_2025-03-31_15-00-36/: agent_data.csv  model_data.csv
results/results_2025-04-01_12-45-30/: agent_data.csv  model_data.csv  simulation_report.csv
results/results_2025-04-01_12-47-31/: agent_data.csv  model_data.csv  simulation_report.csv
sandbox/: abm_sandbox.ipynb  langgraph_agent.py
shared_results/eco_consumer_eco_producer&util/: advanced_kpis.json  agent_data.csv  model_data.csv  simulation_report.csv  simulation_report.md
shared_results/eco_consumer_profit_driven_producer&util/: advanced_kpis.json  agent_data.csv  model_data.csv  simulation_report.csv  simulation_report.md
shared_results/test_consistency_00/: advanced_kpis.json  agent_data.csv  consumeragent_model_data_data.csv  energyproduceragent_model_data_data.csv  model_data.csv  prosumeragent_model_data_data.csv  regulatoragent_model_data_data.csv  simulation_report.csv  simulation_report.md  utilityagent_model_data_data.csv
shared_results/test_consistency_01/: advanced_kpis.json  agent_data.csv  consumeragent_model_data_data.csv  energyproduceragent_model_data_data.csv  model_data.csv  prosumeragent_model_data_data.csv  regulatoragent_model_data_data.csv  simulation_report.csv  simulation_report.md  utilityagent_model_data_data.csv
src/energy_market/: __init__.py  __main__.py  constants.py  logging_system.py  main.py  (+1 more)
tests/: test_energy_market.py
(+13 files in other folders)
