[tool.poetry]
name = "llm-abm-energymarkets"
version = "0.1.0"
description = "Agent-based modeling for energy markets using LLMs"
authors = ["Alexandre Foulon <alex.foulon@hotmail.fr>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
mesa = {extras = ["rec"], version = "^2.1.1"}
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 