[tool.poetry]
name = "llm-abm-energymarkets"
version = "0.1.0"
description = "Agent-based modeling for energy markets using LLMs"
authors = ["Alexandre Foulon <alex.foulon@hotmail.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
mesa = {extras = ["rec"], version = "^2.1.1"}
seaborn = "^0.13.2"
langchain = "^0.3.21"
langgraph = "^0.3.17"
langchain-openai = "^0.3.9"
langchain-ollama = "^0.2.3"
langchain-community = "^0.3.20"
plotly = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 